--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -13,7 +13,14 @@
   <body>
     <a href="/">Home</a>
     <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
+
+    <h1>About Me</h1>
+    <h2>... and my new Astro site!</h2>
     <h1>Diego's Astro site</h1>
+    <p>
+      I am working through Astro's introduction tutorial. This is the second
+      page of my website
+    </p>
+    <p>This site will update as I complete more of the tutorial</p>
   </body>
 </html>
